--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -14,22 +14,23 @@
   title={Linear-Phase FIR Filter Design by Least Squares},
   author={Ivan Selesnick},
   publisher={Benjamin Fite and Adan Galvan andIvan Selesnick},
-  date={2002-08-05}
+  date={2002-08-05},
+  url={https://cnx.org/contents/eb1ecb35-03a9-4610-ba87-41cd771c95f2@7},
+  urldate={2021-05-07}
 }
 
-@periodical{mcclellan_parks,
-  title={A unified approach to the design of optimum FIR linear phase digital filters},
-  author={J. H. McClellan and T. W. Parks},
-  publisher={IEEE},
-  date={1973-11},
-  pages={697-701},
+@article{mcclellan_parks,
+  author={McClellan, J. and Parks, T.},
+  journal={IEEE Transactions on Circuit Theory},
+  title={A unified approach to the design of optimum FIR linear-phase digital filters},
+  year={1973},
   volume={20},
   number={6},
+  pages={697-701},
   doi={10.1109/TCT.1973.1083764}
 }
 
 @online{source_code,
-  title={Repositório do trabalho},
   url={https://github.com/mateusosmarin/tcc},
   urldate={2021-05-07}
 }
@@ -44,5 +45,41 @@
 @online{pickle,
   title={Python Object Serialization},
   url={https://docs.python.org/3/library/pickle.html},
+  urldate={2021-05-07}
+}
+
+@online{python,
+  title={Python},
+  url={https://www.python.org},
+  urldate={2021-05-07}
+}
+
+@online{gtk,
+  title={The GTK Project - A free and open-source cross-platform widget toolkit},
+  url={https://www.gtk.org},
+  urldate={2021-05-07}
+}
+
+@online{pygtk,
+  title={The Python GTK+ 3 Tutorial},
+  url={https://python-gtk-3-tutorial.readthedocs.io/en/latest/},
+  urldate={2021-05-07}
+}
+
+@online{numpy,
+  title={NumPy},
+  url={https://numpy.org},
+  urldate={2021-05-07}
+}
+
+@online{scipy,
+  title={SciPy},
+  url={https://www.scipy.org},
+  urldate={2021-05-07}
+}
+
+@online{matplotlib,
+  title={Matplotlib: Visualization with Python},
+  url={https://matplotlib.org},
   urldate={2021-05-07}
 }
