Adiciona trecho a respeito do critério de Nyquist

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -10,6 +10,12 @@
   publisher={Cambridge University Press}
 }
 
+@book{lathi,
+  title={Modern Digital and Analog Communication Systems},
+  author={B. P. Lathi and Zhi Ding},
+  publisher={Oxford University Press}
+}
+
 @article{selesnick,
   title={Linear-Phase FIR Filter Design by Least Squares},
   author={Ivan Selesnick},
