Adiciona objetivos gerais e específicos

--- a/document/main.tex
+++ b/document/main.tex
@@ -250,10 +250,22 @@ Orientador(a)\\[2.41cm]
   estudantes e profissionais da área da ciência e tecnologia, dada a grande quantidade de bibliotecas disponíveis
   para todo tipo de problemas.
 
-  Dessa forma, o presente trabalho tem como objetivo o desenvolvimento de um software livre para projeto de
-  filtros digitais utilizando a linguagem de programação Python, construindo uma interface gráfica amigável em
-  GTK para aumento de produtividade e facilitar o aprendizado na área de processamento de sinais, contando com
-  uma revisão de conceitos importantes a servir como referência para utilização do sistema.
+\chapter{Objetivos}
+\section{Objetivos gerais}
+  O presente trabalho tem como objetivo o desenvolvimento de um software livre para projeto de filtros digitais
+  utilizando a linguagem de programação Python, construindo uma interface gráfica amigável em GTK para aumento
+  de produtividade e facilitar o aprendizado na área de processamento de sinais, contando com uma revisão de
+  conceitos importantes a servir como referência para utilização do sistema.
+
+\section{Objetivos específicos}
+Os objetivos específicos deste trabalho consistem no desenvolvimento de uma aplicação com interface gráfica que
+  \begin{itemize}
+    \item possibilite projetar filtros FIR e IIR utilizando técnicas clássicas da literatura;
+    \item permita visualizar as principais características dos filtros projetados, como resposta em frequência
+      (amplitude e fase), localização de polos e zeros no plano complexo e resposta ao impulso;
+    \item tenha a opção de exportar o filtro projetado para que seja possível utilizá-lo externamente.
+  \end{itemize}
+
 \chapter{Referenciais teóricos}
 \section{Sinais}
   Em essência, um sinal é algo que contém alguma informação, geralmente sobre o estado de um sistema físico
