Agrupa citação do GTK e PyGTK

--- a/document/main.tex
+++ b/document/main.tex
@@ -672,9 +672,9 @@ Os objetivos específicos deste trabalho consistem no desenvolvimento de uma apl
   O principal objetivo deste trabalho foi o desenvolvimento de uma aplicação com interface gráfica para projeto
   de filtros digitais. Neste capítulo, serão apresentados detalhes sobre a elaboração do software.
 
-  A ferramenta foi desenvolvida em Python 3 \cite{python}, utilizando as bibliotecas GTK \cite{gtk} \cite{pygtk},
-  para interface gráfica, NumPy \cite{numpy} para computação numérica eficiente, SciPy \cite{scipy} para projeto
-  dos filtros e Matplotlib \cite{matplotlib} para visualização de dados.
+  A ferramenta foi desenvolvida em Python 3 \cite{python}, utilizando as bibliotecas GTK \cite{gtk, pygtk}, para
+  interface gráfica, NumPy \cite{numpy} para computação numérica eficiente, SciPy \cite{scipy} para projeto dos
+  filtros e Matplotlib \cite{matplotlib} para visualização de dados.
   O código foi escrito totalmente pelo autor, de forma modular, facilitando modificações e a inclusão de novas
   funcionalidades, estando disponível publicamente no Github \cite{source_code}. Instruções de instalação estão
   inclusas no README do repositório.
