Altera título da referência do NumPy

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -73,7 +73,7 @@
 }
 
 @online{numpy,
-  title={NumPy},
+  title={The fundamental package for scientific computing with Python},
   url={https://numpy.org},
   urldate={2021-05-07}
 }
